EntryTableViewController code complete

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -69,7 +69,7 @@
                                 <connections>
                                     <outlet property="bodyLabel" destination="Gr6-9a-3bw" id="DLa-dd-Dcm"/>
                                     <outlet property="timestampLabel" destination="vQ1-Jc-m8h" id="ahn-JN-zao"/>
-                                    <outlet property="titeLabel" destination="May-Ok-iUA" id="NeG-d9-tli"/>
+                                    <outlet property="titleLabel" destination="May-Ok-iUA" id="P1w-j1-NnB"/>
                                     <segue destination="S9Q-mB-3EU" kind="show" identifier="ShowEntryDetail" id="uoO-du-nZ4"/>
                                 </connections>
                             </tableViewCell>
