setup EntryDetailViewController with appropriate outlets and Storyboard

--- a/ios-journal-coredata/ios-journal-coredata/Storyboards/Base.lproj/Main.storyboard
+++ b/ios-journal-coredata/ios-journal-coredata/Storyboards/Base.lproj/Main.storyboard
@@ -6,7 +6,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -26,24 +28,23 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="tRb-xK-Xij">
-                                            <rect key="frame" x="16" y="11" width="85.5" height="61.5"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tRb-xK-Xij">
+                                            <rect key="frame" x="16" y="11" width="343" height="78"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2B3-zN-a5b">
-                                                    <rect key="frame" x="0.0" y="0.0" width="85.5" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2B3-zN-a5b">
+                                                    <rect key="frame" x="0.0" y="0.0" width="343" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9T-Xy-cTK">
-                                                    <rect key="frame" x="0.0" y="20.5" width="85.5" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Timestamp" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9T-Xy-cTK">
+                                                    <rect key="frame" x="0.0" y="29" width="343" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCd-28-sPr">
-                                                    <rect key="frame" x="0.0" y="41" width="85.5" height="20.5"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCd-28-sPr">
+                                                    <rect key="frame" x="0.0" y="57.5" width="343" height="20.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -51,6 +52,12 @@
                                             </subviews>
                                         </stackView>
                                     </subviews>
+                                    <constraints>
+                                        <constraint firstItem="tRb-xK-Xij" firstAttribute="leading" secondItem="rLe-dY-vzu" secondAttribute="leadingMargin" id="LcP-xB-C77"/>
+                                        <constraint firstItem="tRb-xK-Xij" firstAttribute="top" secondItem="rLe-dY-vzu" secondAttribute="topMargin" id="LnR-tO-ZFq"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="tRb-xK-Xij" secondAttribute="bottom" id="MWw-xt-hJS"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="tRb-xK-Xij" secondAttribute="trailing" id="tB2-Ht-xus"/>
+                                    </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="entryBodyLabel" destination="PCd-28-sPr" id="zgO-TR-Znm"/>
@@ -77,16 +84,52 @@
             </objects>
             <point key="canvasLocation" x="226.40000000000001" y="253.2233883058471"/>
         </scene>
-        <!--View Controller-->
+        <!--Entry Detail View Controller-->
         <scene sceneID="YSy-yS-l4l">
             <objects>
-                <viewController id="R2g-Ea-wYD" sceneMemberID="viewController">
+                <viewController id="R2g-Ea-wYD" customClass="EntryDetailViewController" customModule="ios_journal_coredata" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="zay-14-hPC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="KZx-ed-oeA">
+                                <rect key="frame" x="16" y="80" width="343" height="571"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tzg-WC-7j3">
+                                        <rect key="frame" x="0.0" y="0.0" width="343" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" verticalHuggingPriority="249" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="KPQ-Pg-ASh">
+                                        <rect key="frame" x="0.0" y="30" width="343" height="541"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="KZx-ed-oeA" firstAttribute="leading" secondItem="5eB-lX-xQe" secondAttribute="leading" constant="16" id="B8w-h6-FNm"/>
+                            <constraint firstItem="5eB-lX-xQe" firstAttribute="bottom" secondItem="KZx-ed-oeA" secondAttribute="bottom" constant="16" id="BpY-ch-TF8"/>
+                            <constraint firstItem="5eB-lX-xQe" firstAttribute="trailing" secondItem="KZx-ed-oeA" secondAttribute="trailing" constant="16" id="GoP-0a-otr"/>
+                            <constraint firstItem="KZx-ed-oeA" firstAttribute="top" secondItem="5eB-lX-xQe" secondAttribute="top" constant="16" id="ZTz-zR-JuS"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="5eB-lX-xQe"/>
                     </view>
+                    <navigationItem key="navigationItem" id="or5-1a-P8h">
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="VdT-bN-Id3">
+                            <connections>
+                                <action selector="save:" destination="R2g-Ea-wYD" id="laq-nX-sg3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="textField" destination="tzg-WC-7j3" id="Y7r-gK-MXT"/>
+                        <outlet property="textView" destination="KPQ-Pg-ASh" id="hQi-fW-HS6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SEh-QO-adL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
